...
//		var info: SendViewModelInfoProtocol
	}

	// MARK: -

	var title: String {
		return "Send".localized()
	}

	typealias FormChangedObservable = (String?, String?, String?, String?)

  private let updateTableHeight = PublishSubject<Void>()
	private let coinSubject = BehaviorRelay<String?>(value: "")
...

		let blank = BlankTableViewCellItem(reuseIdentifier: "BlankTableViewCell",
																			 identifier: CellIdentifierPrefix.blank.rawValue)

		let button = ButtonTableViewCellItem(reuseIdentifier: "ButtonTableViewCell",
																				 identifier: CellIdentifierPrefix.button.rawValue)
		button.title = "SEND".localized()
		button.buttonPattern = "purple"
		button.isButtonEnabledObservable = formChangedObservable.map({ (val) -> Bool in
			let coin = val.0
			let recipient = val.1
			let amount = val.2
			return !(recipient ?? "").isEmpty && !(amount ?? "").isEmpty && !(coin ?? "").isEmpty
...
	// MARK: -

	private func handle(error: Error) {
		var notification: NotifiableError
		if let error = error as? HTTPClientError {
			if let errorMessage = error.userData?["log"] as? String {
				notification = NotifiableError(title: "An Error Occurred".localized(),
																			 text: errorMessage)
			} else {
				notification = NotifiableError(title: "An Error Occurred".localized(),
																			 text: "Unable to send transaction".localized())
			}
		} else {
...
		viewModel.actionButtonTitle = "VIEW TRANSACTION".localized()
		if to.isValidPublicKey() {
			viewModel.avatarImage = UIImage(named: "delegateImage")
		} else {
			viewModel.avatarImageURL = MinterMyAPIURL.avatarAddress(address: address).url()
		}
		viewModel.secondButtonTitle = "CLOSE".localized()
		viewModel.username = to
		viewModel.title = "Success!".localized()
		return viewModel
	}
}

...
