...

		switch balanceType {
		case .balanceBIP:
			title = "Available Balance".localized()
			break
		case .totalBalanceBIP:
			title = "Total Balance".localized()
			break
		case .totalBalanceUSD:
			title = "Total Balance".localized()
			break
		}
		text = headerViewTitleText(with: balance, isUSD: isUSD)
...
		let button = ButtonTableViewCellItem(reuseIdentifier: "ButtonTableViewCell",
																				 identifier: "ButtonTableViewCell_Transactions")
		button.buttonPattern = "blank"
		button.title = "ALL TRANSACTIONS".localized()
		section.items.append(button)

		var section1 = BaseTableSectionItem(header: "My Coins".localized())
		section1.identifier = "BaseTableSectionItem_2"

		Session.shared.balances.value.keys.sorted(by: { (key1, key2) -> Bool in
			return (key1 == Coin.baseCoin().symbol!) ? true
				: (key2 == Coin.baseCoin().symbol!) ? false
				: (key1 < key2)
...
			section1.items.append(separator)
		}

		let convertButton = ButtonTableViewCellItem(reuseIdentifier: "ButtonTableViewCell",
																								identifier: "ButtonTableViewCell_Convert")
		convertButton.buttonPattern = "blank"
		convertButton.title = "CONVERT".localized()

		section1.items.append(convertButton)

		if section.items.count > 1 {
			sctns.append(section)
		}
...
