...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="fWF-q3-jXc" customClass="TPKeyboardAvoidingScrollView">
                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COIN YOU HAVE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1HE-nT-beU">
                                        <rect key="frame" x="20" y="18" width="84" height="13"/>
                                        <fontDescription key="fontDescription" name="Ubuntu-Medium" family="Ubuntu" pointSize="11"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KlA-XB-YRc" customClass="ValidatableTextField" customModule="MinterWallet" customModuleProvider="target">
...
                                            <outlet property="delegate" destination="0hc-Mb-6Yb" id="5pj-Tr-SO9"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYq-Jk-u2q">
                                        <rect key="frame" x="277" y="124" width="72" height="30"/>
                                        <fontDescription key="fontDescription" name="Ubuntu-Bold" family="Ubuntu" pointSize="16"/>
                                        <state key="normal" title="USE MAX">
                                            <color key="titleColor" red="0.31372549019607843" green="0.1803921568627451" blue="0.76078431372549016" alpha="1" colorSpace="deviceRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="didTapUseMax:" destination="0hc-Mb-6Yb" eventType="touchUpInside" id="X8l-5R-E3l"/>
                                        </connections>
                                    </button>
...
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pFm-Om-pVV" customClass="DefaultButton" customModule="MinterWallet" customModuleProvider="target">
                                        <rect key="frame" x="10" y="465.5" width="355" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="iuv-KQ-Wkm"/>
                                        </constraints>
                                        <state key="normal" title="EXCHANGE"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="animateButtonTouch" value="YES"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="pattern" value="purple"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="didTapExchange:" destination="0hc-Mb-6Yb" eventType="touchUpInside" id="OxA-ba-G7t"/>
...
