...
																							identifier: "TextFieldTableViewCell_Username")
		username.title = "YOUR @USERNAME".localized()
		username.prefix = "@"

		let password = TextFieldTableViewCellItem(reuseIdentifier: "TextFieldTableViewCell",
																							identifier: "TextFieldTableViewCell_Password")
		password.title = "YOUR PASSWORD".localized()
		password.isSecure = true

		let button = ButtonTableViewCellItem(reuseIdentifier: "ButtonTableViewCell",
																				 identifier: "ButtonTableViewCell")
		button.title = "CONTINUE".localized()
		button.buttonPattern = "purple"
		button.isLoadingObserver = self.isLoading.asObservable()
		button.isButtonEnabledObservable = self.isButtonEnabled
		button.isButtonEnabled = false

		var section = BaseTableSectionItem(header: "")
...
